# llama-crab

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml  update-llama-cpp.yml
crates/llama-crab/: Cargo.toml  README.md
crates/llama-crab-server/: Cargo.toml  README.md
crates/llama-crab-server/src/: main.rs
crates/llama-crab-sys/: Cargo.toml  README.md  build.rs
crates/llama-crab-sys/src/: lib.rs
crates/llama-crab-sys/wrappers/: grammar.cpp  grammar.h  mod.cpp  mtmd_helpers.cpp  mtmd_helpers.h
crates/llama-crab/src/: backend.rs  batch.rs  error.rs  lib.rs  log.rs  logit_bias.rs  speculative.rs  token.rs  token_data.rs
crates/llama-crab/src/chat/: message.rs
crates/llama-crab/src/context/: embeddings.rs  kv_cache.rs  mod.rs  params.rs  sampling_state.rs  session.rs
crates/llama-crab/src/hf/: downloader.rs  mod.rs  repo.rs  source.rs
crates/llama-crab/src/high_level/: chat_completion.rs  completion.rs  embedding.rs  hf_tokenizer.rs  infill.rs  mod.rs
crates/llama-crab/src/json_schema/: mod.rs
crates/llama-crab/src/model/: buft_overrides.rs  mod.rs  vocab.rs
crates/llama-crab/src/multimodal/: bitmap.rs  chunks.rs  mod.rs
crates/llama-crab/src/sampling/: mod.rs  strategies.rs
crates/llama-crab/tests/: common.rs  embedding_regression.rs  gemma4_text.rs  gemma4_vision.rs  hf_download.rs  infill_api.rs  rerank_api.rs  streaming_api.rs
crates/tauri-plugin-llama-crab/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-llama-crab/permissions/: default.toml
crates/tauri-plugin-llama-crab/permissions/autogenerated/: reference.md
crates/tauri-plugin-llama-crab/permissions/autogenerated/commands/: create_chat_completion.toml  create_completion.toml  create_rerank.toml  detokenize.toml  retrieve_model.toml  stream_chat_completion.toml  stream_completion.toml  tokenize.toml  tokenize_count.toml
crates/tauri-plugin-llama-crab/permissions/schemas/: schema.json
crates/tauri-plugin-llama-crab/src/: commands.rs  error.rs  lib.rs  models.rs  state.rs  worker.rs
crates/tauri-plugin-llama-crab/tests/: models.rs  state.rs
docs/: README.md  book.toml  docusaurus.config.ts  mkdocs.yml  package.json  requirements.txt  sidebars.ts  typedoc.json
docs/assets/css/: extra.css
docs/docs/: intro.md  troubleshooting.md
docs/docs/contributing/: development.md  examples.md  index.md  releases.md
docs/docs/examples/: embeddings-and-reranking.md  index.md  multimodal.md  server.md  structured-and-tools.md  text-and-chat.md
docs/docs/getting-started/: backends.md  first-run.md  index.md  installation.md  models.md
docs/docs/guides/: index.md  mobile.md  performance.md  troubleshooting-models.md
docs/docs/reference/: cargo-features.md  crates.md  index.md  versioning.md
docs/docs/rust/: chat.md  completion.md  embeddings.md  index.md  lifecycle.md  multimodal.md  structured-output.md  workspace.md
docs/docs/server/: index.md  openai-api.md  operations.md  running.md  streaming.md
docs/docs/tauri/: index.md  permissions.md  plugin.md  typescript-client.md
docs/docs/typescript/: client-contracts.md  index.md  packages.md
docs/en/: index.md  troubleshooting.md
docs/en/about/: acknowledgements.md  changelog.md  contributing.md  index.md  license.md
docs/en/core-concepts/: architecture.md  errors.md  index.md  lifecycle.md
docs/en/examples/: chat.md  embedding-search.md  embeddings.md  index.md  mtmd.md  quickstart.md  reranker.md  simple.md  speculative.md  stateful-chat.md  streaming.md  structured.md  tools.md  vision.md
docs/en/features/: chat.md  embeddings.md  grammars.md  index.md  multimodal.md  speculative.md  stateful-chat.md  text-completion.md
docs/en/getting-started/: cargo-features.md  first-program.md  index.md  installation.md  project-layout.md
docs/en/guides/: backends.md  caching.md  index.md  mobile.md  sampling.md
docs/en/recipes/: chatbot.md  choosing-a-model.md  index.md  performance.md  rag.md
docs/en/reference/: cargo-features.md  chat-templates.md  crate-layout.md  index.md  msrv.md
docs/en/server/: api.md  index.md  running.md  streaming.md  structured.md
docs/pt/: mkdocs.yml
docs/pt/docs/: index.md  troubleshooting.md
docs/src/: SUMMARY.md  backends.md  caching.md  chat.md  embeddings.md  getting-started.md  grammars.md  introduction.md  mobile.md  multimodal.md  reference.md  sampling.md  server.md  speculative.md  stateful_chat.md  troubleshooting.md
examples/: README.md  run.sh
examples/chat/: Cargo.toml
examples/embedding_search/: Cargo.toml
examples/embeddings/: Cargo.toml
examples/lfm_vl_vision/: Cargo.toml
examples/mtmd/: Cargo.toml
examples/mtmd/src/: main.rs
examples/quickstart/: Cargo.toml
examples/reranker/: Cargo.toml
examples/reranker/src/: main.rs
examples/server_lfm/: README.md
examples/simple/: Cargo.toml
examples/speculative/: Cargo.toml
examples/stateful_chat/: Cargo.toml
examples/streaming/: Cargo.toml
examples/structured/: Cargo.toml
examples/tauri-chat-lfm/: README.md  package.json
examples/tools/: Cargo.toml
examples/vision/: Cargo.toml
examples/vision/src/: main.rs
llama-crab/: Cargo.toml
llama-crab-server/: Cargo.toml
llama-crab-server/src/: main.rs
llama-crab-sys/: Cargo.toml  build.rs  wrapper.h
llama-crab-sys/src/: lib.rs
llama-crab-sys/wrappers/: grammar.cpp  grammar.h  llguidance_vtable.cpp  llguidance_vtable.h  mod.cpp  mtmd_helpers.cpp  mtmd_helpers.h  oaicompat.cpp  oaicompat.h
llama-crab/src/: cache.rs  chat.rs  hf_tokenizer.rs  lib.rs  log.rs  sampling.rs  speculative.rs  token_data.rs  tokenizer.rs  util.rs
llama-crab/tests/: gemma4_vision.rs  lfm_vl_vision.rs
scripts/: clean.sh  download_models.sh
tests/: common.rs  examples_migration_smoke.sh  gemma4_text.rs  gemma4_vision.rs  lfm_vl_vision.rs  scripts_smoke.sh  tauri_chat_lfm_smoke.sh
(+114 files in other folders)
