[workspace]
resolver = "2"
members = [
    "llama-crab-sys",
    "llama-crab",
    "examples/quickstart",
    "examples/stateful_chat",
    "examples/embedding_search",
    "examples/simple",
    "examples/chat",
    "examples/embeddings",
    "examples/reranker",
    "examples/speculative",
    "examples/tools",
    "examples/structured",
    "examples/mtmd",
    "examples/vision",
    "examples/lfm_vl_vision",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/DominguesM/llama-crab"
homepage = "https://github.com/DominguesM/llama-crab"
authors = ["llama-crab contributors"]
readme = "README.md"
keywords = ["llama", "llm", "inference", "gguf", "ai"]
categories = ["api-bindings", "science"]
description = "Safe, ergonomic and complete Rust bindings for llama.cpp"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# We use the default `clippy` lint set + a curated allow-list for the
# most pedantic lints. The safe crate enforces its own stricter rules
# in `src/lib.rs` via `#![deny(...)]` annotations.
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
result_large_err = "allow"
unnecessary_wraps = "allow"
redundant_closure = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
useless_format = "allow"
option_if_let_else = "allow"
manual_let_else = "allow"
single_match = "allow"
single_match_else = "allow"
match_wild_err_arm = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
use_self = "allow"
wrong_self_convention = "allow"
needless_collect = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
incremental = true
