[workspace]
resolver = "2"
members = [
    "crates/llama-crab-sys",
    "crates/llama-crab",
    "crates/llama-crab-server",
    "crates/tauri-plugin-llama-crab",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/DominguesM/llama-crab"
homepage = "https://llama-crab.nlp.rocks/"
authors = ["llama-crab contributors"]
readme = "README.md"
keywords = ["llama", "llm", "inference", "gguf", "ai"]
categories = ["api-bindings", "science"]
description = "Safe, ergonomic and complete Rust bindings for llama.cpp"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# We use the default `clippy` lint set + a curated allow-list for the
# most pedantic lints. The safe crate enforces its own stricter rules
# in `src/lib.rs` via `#![deny(...)]` annotations.
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
result_large_err = "allow"
unnecessary_wraps = "allow"
redundant_closure = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
useless_format = "allow"
option_if_let_else = "allow"
manual_let_else = "allow"
single_match = "allow"
single_match_else = "allow"
match_wild_err_arm = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
use_self = "allow"
wrong_self_convention = "allow"
needless_collect = "allow"

[workspace.dependencies]
llama-crab-sys = { path = "crates/llama-crab-sys", version = "0.1.5", default-features = false }
llama-crab = { path = "crates/llama-crab", version = "0.1.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
tauri-plugin = { version = "2" }
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
strip = "debuginfo"

[profile.release-perf]
inherits = "release"

[profile.release-size]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
incremental = true
