[package]
name = "llama-crab-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HTTP server for llama-crab"

[[bin]]
name = "llama-crab-server"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
mtmd = ["llama-crab/mtmd"]

[dependencies]
llama-crab = { path = "../llama-crab", version = "0.1.4", features = ["common"] }
axum = "0.7"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
