[package]
name = "tauri-plugin-llama-crab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Tauri plugin for llama-crab local inference"
links = "tauri-plugin-llama-crab"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
llama-crab = { workspace = true, features = ["common", "hf-hub"] }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
base64 = { version = "0.22", optional = true }
image = { version = "0.25", default-features = false, optional = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
mtmd = ["llama-crab/mtmd", "dep:base64", "dep:image"]
