[package]
name = "quickstart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "run_quickstart"
path = "src/main.rs"

[dependencies]
llama-crab = { path = "../../crates/llama-crab", version = "0.1.0" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
